--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 * {
   margin: 0px;
 }
+body {
+  background-color: #ffffff;
+}
 
 .inter {
   font-family: "Inter", sans-serif;
@@ -144,3 +147,57 @@ header section .paragraph {
   background-color: #228d4d;
 }
 /* ends of crating dot int the early box  */
+.main-heading {
+  text-align: center;
+  margin-top: 50px;
+}
+.main-heading h4 {
+  font-size: 48px;
+  font-weight: bold;
+  color: #001931;
+  margin-bottom: 16px;
+}
+.main-heading p {
+  font-size: 16px;
+  color: #627382;
+  margin-bottom: 20px;
+}
+.mother-div {
+  display: flex;
+  padding: 44px 120px 120px 120px;
+  gap: 24px;
+}
+.child-div {
+  text-align: center;
+  padding: 24px;
+  /* border: 1px solid black; */
+  border-radius: 8px;
+  max-width: 300px;
+  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.08);
+}
+
+.child-div .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.child-div .icon div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  width: 60px;
+  background-color: #f95555;
+  border-radius: 50%;
+}
+.child-div h6 {
+  font-size: 24px;
+  font-weight: 600;
+  margin: 16px 0;
+}
+.child-div p {
+  font-size: 16px;
+  color: #627382;
+  margin-bottom: 30px;
+}
