--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 body header nav {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -58,9 +58,13 @@ header nav ul li a {
   padding: 12px 16px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.18);
 }
+.banner-button #button-right i {
+  margin-right: 10px;
+  vertical-align: bottom;
+}
 
 #button-right:hover {
-  /* transform: scale(1.1); */
+  transform: scale(1.1);
   background-color: #1e5f39;
   border: none;
 }
@@ -138,7 +142,7 @@ header section .paragraph {
 .Early .dot {
   height: 16px;
   width: 16px;
-  background-color: #c0ddcc;
+  background-color: rgba(70, 145, 101, 0.2);
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -148,7 +152,7 @@ header section .paragraph {
   height: 12px;
   width: 12px;
   border-radius: 50%;
-  background-color: #6eb48b;
+  background-color: rgba(70, 145, 101, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -157,7 +161,7 @@ header section .paragraph {
   height: 6px;
   width: 6px;
   border-radius: 50%;
-  background-color: #228d4d;
+  background-color: rgba(70, 145, 101, 1);
 }
 /* ends of crating dot int the early box  */
 .main-heading {
@@ -187,6 +191,9 @@ header section .paragraph {
   border-radius: 8px;
   max-width: 300px;
   box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.08);
+}
+.child-div:hover {
+  transform: scale(1.1);
 }
 
 .child-div .icon {
@@ -230,7 +237,7 @@ header section .paragraph {
   color: #469165;
 }
 .brain-options h4 {
-  padding: 16px 0;
+  margin: 16px 0;
   font-size: 48px;
   font-weight: bold;
 }
@@ -297,6 +304,13 @@ footer .mother {
   align-items: center;
   padding-top: 16px;
 }
+.m-of-icons a {
+  text-decoration: none;
+  color: white;
+}
+footer section {
+  padding-bottom: 0px;
+}
 .copyright {
   display: flex;
   justify-content: center;
@@ -304,6 +318,10 @@ footer .mother {
   color: white;
   font-size: 16px;
   font-weight: 400;
-  padding: 30px;
+  padding: 30px 0;
   border-top: 1px solid #627382;
+}
+.copyright p {
+  font-size: 16px;
+  font-weight: 400;
 }
