--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ header nav ul li a {
   font-weight: 600;
   padding: 12px 16px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.18);
+  transition: transform 0.1s;
 } /*hover effect*/
 .btn:hover {
   transform: scale(1.1);
@@ -190,6 +191,7 @@ header section .paragraph {
   border-radius: 8px;
   max-width: 300px;
   box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.08);
+  transition: transform 0.2s;
 }
 .child-div:hover {
   transform: scale(1.1);
