--- a/style.css
+++ b/style.css
@@ -26,10 +26,12 @@ header nav ul {
   align-items: center;
   gap: 32px;
 }
+
 header nav ul li {
   list-style: none;
   text-decoration: none;
   font-size: 16px;
+  transition: transform 0.4s;
 }
 header nav ul li a {
   text-decoration: none;
